# SimpleSocket

./: .gitignore  CMakeLists.txt  LICENSE
example/: socket_ping_pong.cpp  test_server.py
include/: simple_socket.hpp  simple_sockets.hpp
include/internal/: exceptions.hpp  linux_details.hpp  simple_types.hpp  socket_details.hpp  unique_value.hpp
src/: linux_client.cpp  linux_client_socket.cpp  linux_server_socket.cpp  linux_socket.cpp  linux_utils.cpp  socket.cpp  sockets.cpp
